--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -37,7 +37,9 @@
     // });
   });
   </script>
-    
+
+
+
      <div class="jumbotron" id="top" style="background-image: url(https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/11947483_833544056761626_6388524221709896910_n.jpg?oh=df1434c4094e5f37d1222391567bd482&oe=56807E0E&__gda__=1446490038_9fe83b67f9ad1e62d26e55431b0817a2); background-size: cover; height:530px;">
       <div class="container">
         <div class="row">
@@ -53,7 +55,7 @@
             <!--오늘의 예약건수-->
             <br><br><br><br>
             
-            <div class="notice" id="menu_font" style="margin-left: 175px; padding-top: 20px;padding-left: 10px" >
+            <div id="menu_font" style="margin-left: 175px; padding-top: 20px;padding-left: 10px" >
               <!--아코디언-->
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
@@ -156,11 +158,12 @@
           <%end%> 
 
         </div>
-      </div><br><br><br> 
+      </div><br><br><br>
     </div>
-    
+    </div>
       <!--페이지 내리는거(손가락)-->
       <center>
+      <br><br><br><br><br><br> 
         <div class="page-scroll">
           <p style=" font-size:20px;" id="menu_font">How To Use&nbsp;&nbsp;
           
@@ -176,7 +179,7 @@
 
     <!--공지사항-->
     <section class="mt150" id="notice_slidedown">
-     <br><br><br><br><br><br><br>
+     <br><br><br><br>
         <div itemscope="" itemtype="http://schema.org/LocalBusiness" class="container">
           <div class="row">
             <div class="full">
@@ -205,7 +208,7 @@
           </div>
         </div><br><br><br><br>
       </section>
- 
+
   <!--이용방법-->
   <div class = "how" id ="howtouse">
   <br><br><br><br><br>
@@ -336,9 +339,11 @@
             </i>
           </a>
       </div>
-      <br>
+      </center>
+      <br> <br>
+      
 
-
+      
 
 <% if params[:mode] == "false" %>
    <script>
