--- a/app/views/freeboard/freeboards.erb
+++ b/app/views/freeboard/freeboards.erb
@@ -49,27 +49,29 @@
 <div class="well">
   <center>공지사항 게시판<br>
 </div>
+<br>
 
 <div class="col-md-6 col-md-offset-3">
-<div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title"><center>공지사항</center></h3>
-      </div>
-      <div class="panel-body">
+<!--<div class="panel panel-info">-->
+<!--      <div class="panel-heading">-->
+<!--        <h3 class="panel-title"><center>공지사항</center></h3>-->
+<!--      </div>-->
+<!--      <div class="panel-body">-->
   
   <!--게시판-->
 
   <!--<div class="container">-->
-     <div class="jumbotron" style="width:600px height:600px">
+     <!--<div class="jumbotron" style="width:600px height:600px">-->
       <form id="form1">
         <table class="table table-condensed" id="table" style="padding-top:1px; padding-bottom:1px; background:rgba(0,0,0,0); align:center">
-        
-          <tr>
-            <th style="text-align: center">Num </th>
-            <th style="text-align: center">글쓴이 </th>
-            <th style="text-align: center">제목 </th>
-            <th style="text-align: center">작성일</th>
-          </tr>
+          <center><h3> 공지사항 </h3></center><br>
+          
+            <tr> 
+              <th style="text-align: center">Num </th>
+              <th style="text-align: center">글쓴이 </th>
+              <th style="text-align: center">제목 </th>
+              <th style="text-align: center">작성일</th>
+            </tr>
           <% @fb_all.reverse_each do |a| %>
                 <tr class="data">
                     <td  style="text-align :center"><%= a.id %></td>
@@ -86,11 +88,11 @@
             <% end %>
         </table>
         <% if user_signed_in? %>
-                 <% if current_user.email == 'admin@ptu.ac.kr' %>
-                    <p align="right"><a href="/freeboard/upload">작성하기</a></p>
+                 <% if current_user.email == 'admin@ptu.ac.kr' %> <br>
+                    <a href="/freeboard/upload"><input type = "button"  class="btn btn-primary btn-sm" value = "작성하기"></input></a>
                   <% else %>
-                  
-                    <input type ="button" id = "writeadmin" value = "작성하기"></input>
+                    <br>
+                    <input class="btn btn-primary btn-sm" type ="button" id = "writeadmin" value = "작성하기"></input>
                                        
                     <script type="text/javascript"> 
                       $(function() {
@@ -118,17 +120,17 @@
                       
                   <% end %>
         <% else %>
-            <p align="right"><a href="/freeboard/warning">작성하기</a></p>
+          <a href="/freeboard/upload"><input type = "button"  class="btn btn-primary btn-sm"  value = "작성하기"></input></a>
         <% end %>
         <div class="paging-container" id="tablePaging"> </div>
         <div style="clear: both;"></div>
       </form>
-    </div>
+    <!--</div>-->
 
 
   
-</div><!--패널-->
-</div><!--전체패널-->
+<!--</div><!--패널-->
+<!--</div><!--전체패널-->
 </div>
 
 
@@ -151,7 +153,7 @@
 </div>
 </div>
 	
-	
+	<br><br><br><br><br>
 </body>
 </html>
 
