--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -116,13 +116,12 @@
       <!--마지막 copyright 부분-->
       <footer>
         <center>      
-        <br><br> 
-          <div style="background-color:#0C5838;margin-top: 500px;">
+          <div style="background-color:#0C5838;">
           <br><br><br>
             <p style = "color: white; font-size:19px;">Copyright © Company Tip+_one 2015, All Rights Reserved.<br></p>
             <p style="color: white; font-size:17px;">E-mail : um135@naver.com<br>
                                                      Pyeongtaek University URL : link( <a href = "www.ptu.ac.kr" style="color:white">www.ptu.ac.kr</a> )
-            <br><br><br><br></p>  
+          <br><br><br><br></p>  
           </div>
         </center>
       </footer>
