--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -18,15 +18,15 @@
 .notice {
     
     position: auto;
-    top: 100px;
-    left: 100px;
-    width: 400px;
-    height: 200px;
-    padding: 50px 0px;
-    border: 1px solid black;
-    background-color: white;
-    text-align: center;
-    color: black;
+    // top: 100px;
+    // left: 100px;
+    // width: 400px;
+    // height: 200px;
+    // padding: 50px 0px;
+    // border: 1px solid black;
+    // background-color: white;
+    // text-align: center;
+    // color: black;
     opacity: 0.6;
 }
 
