--- a/app/views/book/condition.erb
+++ b/app/views/book/condition.erb
@@ -1,4 +1,11 @@
-<div class="col-md-8">
+<div class="well">
+  <center>d 정보입니다.</center>
+</div>
+
+<div class="container">
+<div class="row">
+
+<center>
   <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
@@ -6,6 +13,7 @@
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
+        <th></th>
         <th></th>
         <th></th>
       </tr>
@@ -20,9 +28,9 @@
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
             
             <td>
-            <!--<2% if current_user %> <!--로그인 된 상태.-->-->
+            <!--<2% if current_user %> <!--로그인 된 상태.-->
                       
-                <!--<2%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->-->
+                <!--<2%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
                   <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
                   
                   <% if c.state=="승인대기" %>
@@ -32,13 +40,13 @@
                   <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
                   <%end%>
                                 
-                <!--<2% else %> <!--관리자가 아닐때 승인대기-->-->
-                <!--  <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->-->
+                <!--<2% else %> <!--관리자가 아닐때 승인대기-->
+                <!--  <span class="label label-info"><%#=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
                   <!--<input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>-->
                             
                 <!--<2% end %>-->
                       
-              <!--<2% else %> <!--로그인 안된 상태에서는 로그인창으로 이동-->-->
+              <!--<2% else %> <!--로그인 안된 상태에서는 로그인창으로 이동-->
                
             
               <!--<2% end %>  -->
@@ -86,4 +94,7 @@
       <% end %>
     </tbody>
   </table> 
+</center>
+<br><br>
+</div>
 </div>
