--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -1,12 +1,12 @@
+<div class="well">
+  <center><strong><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일의 <%=@class.building_name%> '<%=@class.room_number%>호'</strong>에 대한 예약현황입니다.</center>
+  <br><center><a href="/book/booking/<%=@class.id%>&date=<%=@date%>" class="btn btn-warning">예약하기</a></center>
+</div>
+
 <div class="containter"> 
 <div class="row">
 
-<div class="well">
-  <center><strong><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일의 <%=@class.building_name%> <%=@class.room_number%>호</strong>에 대한 예약현황입니다.</center>
-  <center><a href="/book/booking/<%=@class.id%>&date=<%=@date%>" class="btn btn-warning">예약하기</a></center>
-</div>
-
-<div class="col-md-4">
+<div class="col-md-3 col-md-offset-1">
   <div class="panel panel-info">
     <div class="panel-heading">
       <h3 class="panel-title"><center>예약 현황을 볼 날짜를 선택해라</center></h3>
@@ -23,110 +23,111 @@
        </center>
     </div>
   </div>
+</div>
   
  
-  <div class="panel panel-info">
+<!--  <div class="panel panel-info">-->
     
-    <div class="panel-heading">
-      <h3 class="panel-title"><center>예약 타임 테이블 </center></h3>
-    </div>
+  <!--  <div class="panel-heading">-->
+  <!--    <h3 class="panel-title"><center>예약 타임 테이블 </center></h3>-->
+  <!--  </div>-->
     
-    <div class="panel-body">
-      <table class="table table-striped table-hover ">
-        <thead>
-          <tr>
-            <th width="15%">시간 \ 요일</th>
-            <th id="월">월</th>
-            <th id="화">화</th>
-            <th id="수">수</th>
-            <th id="목">목</th>
-            <th id="금">금</th>
+  <!--  <div class="panel-body">-->
+  <!--    <table class="table table-striped table-hover ">-->
+  <!--      <thead>-->
+  <!--        <tr>-->
+  <!--          <th width="15%">시간 \ 요일</th>-->
+  <!--          <th id="월">월</th>-->
+  <!--          <th id="화">화</th>-->
+  <!--          <th id="수">수</th>-->
+  <!--          <th id="목">목</th>-->
+  <!--          <th id="금">금</th>-->
 
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td id="1교시">09:00 - 10:00</td>
-            <td id="월1"></td>
-            <td id="화1"></td>
-            <td id="수1"></td>
-            <td id="목1"></td>
-            <td id="금1"></td>
-          </tr>
+  <!--        </tr>-->
+  <!--      </thead>-->
+  <!--      <tbody>-->
+  <!--        <tr>-->
+  <!--          <td id="1교시">09:00 - 10:00</td>-->
+  <!--          <td id="월1"></td>-->
+  <!--          <td id="화1"></td>-->
+  <!--          <td id="수1"></td>-->
+  <!--          <td id="목1"></td>-->
+  <!--          <td id="금1"></td>-->
+  <!--        </tr>-->
           
-          <tr>
-            <td id="2교시">10:00 - 11:00</td>
-            <td id="월2"></td>
-            <td id="화2"></td>
-            <td id="수2"></td>
-            <td id="목2"></td>
-            <td id="금2"></td>
-          </tr>
-          <tr>
-            <td id="3교시">12:00 - 13:00</td>
-            <td id="월3"></td>
-            <td id="화3"></td>
-            <td id="수3"></td>
-            <td id="목3"></td>
-            <td id="금3"></td>
-          </tr>
-          <tr>
-            <td id="4교시">13:00 - 14:00</td>
-            <td id="월4"></td>
-            <td id="화4"></td>
-            <td id="수4"></td>
-            <td id="목4"></td>
-            <td id="금4"></td>
-          </tr>
-          <tr>
-            <td id="5교시">14:00 - 15:00</td>
-            <td id="월5"></td>
-            <td id="화5"></td>
-            <td id="수5"></td>
-            <td id="목5"></td>
-            <td id="금5"></td>
-          </tr>
-          <tr>
-            <td id="6교시">15:00 - 16:00</td>
-            <td id="월6"></td>
-            <td id="화6"></td>
-            <td id="수6"></td>
-            <td id="목6"></td>
-            <td id="금6"></td>
-          </tr>
-          <tr>
-            <td id="7교시">16:00 - 17:00</td>
-            <td id="월7"></td>
-            <td id="화7"></td>
-            <td id="수7"></td>
-            <td id="목7"></td>
-            <td id="금7"></td>
-          </tr>
-          <tr>
-            <td id="8교시">17:00 - 18:00</td>
-            <td id="월8"></td>
-            <td id="화8"></td>
-            <td id="수8"></td>
-            <td id="목8"></td>
-            <td id="금8"></td>
-          </tr>
-          <tr>
-            <td id="9교시">18:00 - 19:00</td>
-            <td id="월9"></td>
-            <td id="화9"></td>
-            <td id="수9"></td>
-            <td id="목9"></td>
-            <td id="금9"></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <!--        <tr>-->
+  <!--          <td id="2교시">10:00 - 11:00</td>-->
+  <!--          <td id="월2"></td>-->
+  <!--          <td id="화2"></td>-->
+  <!--          <td id="수2"></td>-->
+  <!--          <td id="목2"></td>-->
+  <!--          <td id="금2"></td>-->
+  <!--        </tr>-->
+  <!--        <tr>-->
+  <!--          <td id="3교시">12:00 - 13:00</td>-->
+  <!--          <td id="월3"></td>-->
+  <!--          <td id="화3"></td>-->
+  <!--          <td id="수3"></td>-->
+  <!--          <td id="목3"></td>-->
+  <!--          <td id="금3"></td>-->
+  <!--        </tr>-->
+  <!--        <tr>-->
+  <!--          <td id="4교시">13:00 - 14:00</td>-->
+  <!--          <td id="월4"></td>-->
+  <!--          <td id="화4"></td>-->
+  <!--          <td id="수4"></td>-->
+  <!--          <td id="목4"></td>-->
+  <!--          <td id="금4"></td>-->
+  <!--        </tr>-->
+  <!--        <tr>-->
+  <!--          <td id="5교시">14:00 - 15:00</td>-->
+  <!--          <td id="월5"></td>-->
+  <!--          <td id="화5"></td>-->
+  <!--          <td id="수5"></td>-->
+  <!--          <td id="목5"></td>-->
+  <!--          <td id="금5"></td>-->
+  <!--        </tr>-->
+  <!--        <tr>-->
+  <!--          <td id="6교시">15:00 - 16:00</td>-->
+  <!--          <td id="월6"></td>-->
+  <!--          <td id="화6"></td>-->
+  <!--          <td id="수6"></td>-->
+  <!--          <td id="목6"></td>-->
+  <!--          <td id="금6"></td>-->
+  <!--        </tr>-->
+  <!--        <tr>-->
+  <!--          <td id="7교시">16:00 - 17:00</td>-->
+  <!--          <td id="월7"></td>-->
+  <!--          <td id="화7"></td>-->
+  <!--          <td id="수7"></td>-->
+  <!--          <td id="목7"></td>-->
+  <!--          <td id="금7"></td>-->
+  <!--        </tr>-->
+  <!--        <tr>-->
+  <!--          <td id="8교시">17:00 - 18:00</td>-->
+  <!--          <td id="월8"></td>-->
+  <!--          <td id="화8"></td>-->
+  <!--          <td id="수8"></td>-->
+  <!--          <td id="목8"></td>-->
+  <!--          <td id="금8"></td>-->
+  <!--        </tr>-->
+  <!--        <tr>-->
+  <!--          <td id="9교시">18:00 - 19:00</td>-->
+  <!--          <td id="월9"></td>-->
+  <!--          <td id="화9"></td>-->
+  <!--          <td id="수9"></td>-->
+  <!--          <td id="목9"></td>-->
+  <!--          <td id="금9"></td>-->
+  <!--        </tr>-->
+  <!--      </tbody>-->
+  <!--    </table>-->
+  <!--  </div>-->
       
-  </div>
-</div>
+  <!--</div>-->
+<!--</div>-->
 
 
-<div class="col-md-8">
+<div class="col-md-7 col-md-offset-0">
   <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
@@ -134,6 +135,7 @@
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
+        <th></th>
         <th></th>
         <th></th>
       </tr>
@@ -193,30 +195,31 @@
            view_state.innerHTML="<%=c.state%>"; //상태표시를 바꿔줌
            button.innerHTML="승인하기"; //버튼의값을 일시적으로 바꿔줌
       <%end%>
-  // });s
+  // });
 };
 </script>
-                 </td>
+            </td>
                
             <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
             
+            <td>
             <% if current_user %>
                <% if User.find(c.user).email == current_user.email %>
-                예약취소는 사용자만 가능하게! 관리자가 안된다고 생각하면 삭제 말고 승인 거부하면된다
-                <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button></td>
+                <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button>
                <% else %>
                  
                <%end%>
             <% else %>
             
             <% end %>
-            
+            </td>
           </tr>
 
       <% end %>
     </tbody>
   </table> 
 </div>
+</div> <!--row의 div>
 
 
 <% @class.reservations.where(date: @date).each do |c| %><!--예약취소 모달-->
@@ -287,5 +290,5 @@
 </div>
 <%end%>
 
-</div>
+
 </div>
