--- a/app/views/freeboard/upload.erb
+++ b/app/views/freeboard/upload.erb
@@ -2,30 +2,37 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-
-<h1>게시글 등록</h1><br>
+<span class="badge"> </span>
+<center>
+<h1>  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> &nbsp;
+게시글 등록</h1><br><br>
 <%= form_tag("/freeboard/write", method: "post") do %>
     
     <% if user_signed_in? %>
-        이름 : <%= current_user.student_name %> 
+        <p style = "font-size:20px;"> 이름 : 
+        
+        <input tpye= "text" name = "users" value="<%= current_user.student_name %>"> </input> </p> 
         
     <% end %>
-    <br>
-    <input type="password" name="user_passowrd" placeholder="Pw">
-    <br>
-    <br>
+    
+    <br><br>
+    <p style = "font-size:20px;">제목:  &nbsp; 
     <input type="text" name="user_title" placeholder="Title">
-    <br>
-    <textarea name="user_content" placeholder="Content"></textarea>
+    <br><br><br></p>
+     <p style = "font-size:20px;">내용 : </p> <br> 
+    <textarea name="user_content" placeholder="Content" rows="20" cols="70"></textarea>
     <br>
     <input type="hidden" name="user_name" value="<%= current_user.student_name %>">
     <!--<input type="hidden" name="user_major" value="<%#= current_user.major %>">-->
     <input type="hidden" name="user_hakbun" value="<%= current_user.student_number %>">
-    
+    <br>
+    * 작성한 게시글의 비밀번호를 입력해주세요.<br>
+    (수정 및 삭제시 사용됩니다.)<br><br>
+    <input type="password" name="user_passowrd" placeholder="Password">
+    <br><br><br>
 
-    <input type="submit" value="확인">
+    <input type="submit" class="btn btn-primary btn-sm" value="작성하기"> <br> <br> <br>
+
 
 <% end %>
+</center>
