--- a/app/views/freeboard/upload_view.erb
+++ b/app/views/freeboard/upload_view.erb
@@ -1,86 +1,48 @@
 
-<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+
+
 <style>
-.jumbotron
-{ min-height: 650px; 
-color:black;
-background: #ffffff;
-background: rgba(255, 255, 255, 0.5);
-}
-    </style>
-
-<body>
-
+    .jumbotron { 
+        min-height: 650px; 
+        color:black;
+        background: #ffffff;
+        background: rgba(255, 255, 255, 0.5);
+    }
+</style>
 
     <div class="container">
-        <div container>
-            <div class="row">
-                <div class="col-md-3">
-                    
-                </div>
-                <div class="col-md-6">
-                
-                    <div class="jumbotron">
-                   <h2>Freeboard</h2><br><br>
-                   TITLE
+    <div class="row">
+                    <br><br><br><br>
+                                
+                    제목
                     <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.5); align:center">
                         <center><h3><%= @one_fb.fb_title %></h3></center>
-                      </div>  
-                        <br><br>
-                        CONTENT
-                        <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.5); align:center"><br>
-                        <center><p class="lead"><%= @one_fb.fb_content %></p></center><br><br>
+                    </div><br><br> 
                         
-                        <center>
-                            
-                            </div>
-                            
+                    내용
+                    <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.5); align:center;"><br>
+                    <center><p class="lead"><%= @one_fb.fb_content %></p></center><br><br>
+                    </div><br>
+                                              
                             <% @one_fb.replies.each do |r| %>
                              
                                 <div class="<%= r.id %>">  
                                 
-                                    <p style="text-align:center"><h6> ------- <%= r.rp_name %>: <%= r.rp_content %> </h6> </p>
+                                    <h6><%= r.rp_name %> : <%= r.rp_content %></h6>
                                     
                                 </div>
-                                <div class="<%= r.id %>" style="display :none">
-                                    
-                                        <textarea name="rp_content"></textarea>
-                                        <input type="submit" value='확인'></button>
-                                        <input type="hidden" name="rp_id" value="<%= r.id %>">
-                                        
-                                </div>
+                                <!--<div class="<%= r.id %>" style="display :none">                               -->
+                                <!--        <textarea name="rp_content"></textarea>-->
+                                <!--        <input type="submit" value='확인'></button>-->
+                                <!--        <input type="hidden" name="rp_id" value="<%= r.id %>">                                       -->
+                                <!--</div>-->
                                 
                                 <form  action="/freeboard/reply_delete" method="GET">
                                     <input type="hidden" name="rp_id" value="<%= r.id %>">
-                                    <input type="submit" value="삭제">
-                                    
+                                    <input type="submit" value="삭제">                                
                                 </form>
-                                
-                                
-                                <!--<button href="#" id="update_button<%= r.id %>">수정</button>-->
-                                
                             
-                                <!--<script>-->
-                                
-                                <!--    $(function(){-->
-                                <!--        $("#update_button<%= r.id%>").click(function(){-->
-                                            <!--//수정 버튼 클릭했을때-->
-                                         
-                                <!--        <%# if current_user.student_name == r.rp_name %>-->
-                                            
-                                <!--            $(".<%= r.id %>" ).show();-->
-                                            
-                                <!--        <%# else %>-->
-                                            
-                                            
-                                        
-                                <!--        <%# end %>-->
-                                            
-                                <!--            });-->
-                                <!--    });-->
-                                <!--</script>-->
-                            <% end %>
-                  
+                            <% end %> 
                           <br><br>
                             <%= form_tag("/freeboard/reply_write", method: "post") do %>
                                 <% if user_signed_in? %>
@@ -91,17 +53,12 @@ background: rgba(255, 255, 255, 0.5);
                                 <input type="hidden" name="freeboard_id" value="<%= @one_fb.id %>">
                                 <input type="hidden" name="rp_name" value="<%= current_user.student_name %>">
                                 <input type="hidden" name="rp_hakbun" value="<%= current_user.student_number %>">
-                                <input type="submit" value="댓글달기"><br>
-                                
-                               
-                                <a href="/freeboard/delete?id=<%= @one_fb.id %>">삭제쓰</a>&nbsp;
-                                <a href="/freeboard/modify?id=<%= @one_fb.id %>">수정쓰</a>
+                                <input type="submit" value="댓글달기">
+                                <a href="/freeboard/delete?id=<%= @one_fb.id %>">삭제하기</a>
+                                <a href="/freeboard/modify?id=<%= @one_fb.id %>">수정하기</a><br><br><br><br><br><br>
                             <% end %>
-                        </center>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
 
+<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
