--- a/app/views/freeboard/delete.erb
+++ b/app/views/freeboard/delete.erb
@@ -4,6 +4,7 @@
 <br>
 <br>
 <br>
+<center>
 <h1>삭제 페이지</h1>
     <%= form_tag("/freeboard/delete_action", method: "post") do %>
         
@@ -16,3 +17,5 @@
         
     
     <% end %>
+    
+</center>
