--- a/app/views/freeboard/modify.erb
+++ b/app/views/freeboard/modify.erb
@@ -4,20 +4,28 @@
 <br>
 <br>
 <br>
-
-<h1>수정 페이지</h1>
+<center>
+<h1>수정 페이지</h1> <br><br>
 <%= form_tag("/freeboard/update", method: "post") do %>
     
-      <p> 작성자 : <%= @one_fb.fb_name %></p> 
+      <p style = "font-size:20px;"> 작성자 :</p>
+          <input type="text" name="md_name" value = "<%= @one_fb.fb_name %>"> </input>
     <br>
+      <p style = "font-size:20px;"> 제목 : </p>
         <input type="text" name="md_title" placeholder="Title" value = "<%= @one_fb.fb_title %>">
     <br>
     <br>
+      <p style = "font-size:20px;"> 내용 : </p>
         <textarea type="text" name="md_content"  placeholder="Content"><%= @one_fb.fb_content %></textarea>
-    <br>
-        <p><input type="password" name="md_passowrd" placeholder="Pw"> 비밀번호를 입력해주세요 </p>
-    <br>
-        <input type="submit" value="확인">
+    <br><br>
+        <p> * 게시글 작성시 입력한 비밀번호를 입력해주세요. </p>
+        <input type="password" name="md_passowrd" placeholder="Pw"> 
+    <br><br>
+        <input type="submit" class = "btn btn-primary" value="수정완료">
         <input type='hidden' name='id' value='<%= @id %>'>
     
 <% end %>
+
+</center>
+
+<br><br><br>
