게시판수정

--- a/app/views/freeboard/upload.erb
+++ b/app/views/freeboard/upload.erb
@@ -28,11 +28,13 @@
     <input type="hidden" name="user_hakbun" value="<%= current_user.student_number %>">
     <br>
         <div style="text-align: center; font-size: 18px;" id="menu_font">
-            * 작성할 게시글의 비밀번호를 입력해주세요.<br>
+            * 게시글의 비밀번호를 입력해주세요.<br>
             (수정 및 삭제시 사용됩니다)<br>
         </div>
     <input type="password" name="user_passowrd" placeholder="Password" style="font-size: 15px; height: 30px;" id="menu_font_t">&nbsp;
-    <input class="btn btn-primary btn-sm" type ="button" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input> <br> <br> <br>
+    
+    
+    <input class="btn btn-primary btn-sm" type ="submit" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input> <br> <br> <br>
 
 <% end %>
 </center><br><br><br><br><br>
