--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         <div class = "col-md-6">
                 <ul class="nav navbar-nav" id="menu_font" style="padding-left:70px">
                       <li>
-                          <a href="/"><img src="http://my-zone-park-ji-yeon.c9.io/img/ptu.jpg" /></a>
+                          <a href="/"><img src="http://notice-chohyejin.c9.io/img/ptu.png" /></a>
                       </li>
                       <li class="page-scroll">
                         <% if current_page?(controller: 'book', action: 'real_main') %>        
