--- a/app/views/freeboard/modify.erb
+++ b/app/views/freeboard/modify.erb
@@ -5,18 +5,19 @@
 <br>
 <br>
 <center>
-<h1>수정 페이지</h1> <br><br>
-<%= form_tag("/freeboard/update", method: "post") do %>
-    
-      <p style = "font-size:20px;"> 작성자 :</p>
-          <input type="text" name="md_name" value = "<%= @one_fb.fb_name %>"> </input>
+<p  id="menu_font" style="font-size: 30px;"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;게시글 수정</p><br><%= form_tag("/freeboard/update", method: "post") do %>
+    <div style = "background-img:http://notice-chohyejin.c9.io/img/post.JPG">
+     <div style="text-align: center; font-size: 20px;" id="menu_font"> 이름 </div>
+          <input type="text" name="md_name" value = "<%= @one_fb.fb_name %>"> </input> <br>
+      
+     
     <br>
       <p style = "font-size:20px;"> 제목 : </p>
         <input type="text" name="md_title" placeholder="Title" value = "<%= @one_fb.fb_title %>">
     <br>
     <br>
       <p style = "font-size:20px;"> 내용 : </p>
-        <textarea type="text" name="md_content"  placeholder="Content"><%= @one_fb.fb_content %></textarea>
+        <textarea type="text" name="md_content"  placeholder="Content" rows="20" cols="70" ><%= @one_fb.fb_content %></textarea>
     <br><br>
         <p> * 게시글 작성시 입력한 비밀번호를 입력해주세요. </p>
         <input type="password" name="md_passowrd" placeholder="Pw"> 
@@ -26,6 +27,6 @@
     
 <% end %>
 
-</center>
+</center> </div> </div>
 
 <br><br><br>
