--- a/app/views/freeboard/freeboards.erb
+++ b/app/views/freeboard/freeboards.erb
@@ -64,7 +64,8 @@
      <!--<div class="jumbotron" style="width:600px height:600px">-->
       <form id="form1">
         <table class="table table-condensed" id="table" style="padding-top:1px; padding-bottom:1px; background:rgba(0,0,0,0); align:center">
-          <center><p id="menu_font" style="font-size: 30px;"> 공지사항 </p></center><br>
+          <center><p id="menu_font" style="font-size: 30px;">   
+          <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> &nbsp;공지사항 </p></center><br>
           
             <tr> 
               <th style="text-align: center; font-size: 20px;" id="menu_font_t">Num </th>
@@ -95,7 +96,7 @@
                     <a href="/freeboard/upload"><input type = "button"  class="btn btn-primary btn-sm" style="font-size: 18px;" id="menu_font" value = "작성하기"></input></a>
                   <% else %>
                     <br>
-                    <input class="btn btn-primary btn-sm" type ="button" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input>
+                    <input class="btn btn-primary" type ="button" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input>
                                        
                     <script type="text/javascript"> 
                       $(function() {
