--- a/app/views/freeboard/upload.erb
+++ b/app/views/freeboard/upload.erb
@@ -9,7 +9,7 @@
     
     <% if user_signed_in? %>
           <center>   
-            <div style="text-align: center; font-size: 20px;" id="menu_font"> 이름 </div>
+            <div style="text-align: center; font-size: 20px;" id="menu_font"><br> 이름 </div>
             <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); align:center; width: 700px; font-size: 18px;" id="menu_font_t">
                <br><div tpye= "text" name = "users"><%= current_user.student_name %></div><br>
             </div>
@@ -32,8 +32,6 @@
             (수정 및 삭제시 사용됩니다)<br>
         </div>
     <input type="password" name="user_passowrd" placeholder="Password" style="font-size: 15px; height: 30px;" id="menu_font_t">&nbsp;
-    
-    
     <input class="btn btn-primary btn-sm" type ="submit" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input> <br> <br> <br>
 
 <% end %>
