--- a/app/views/book/booking.erb
+++ b/app/views/book/booking.erb
@@ -35,14 +35,14 @@
       <div class="form-group">
         <label for="inputtime" class="col-lg-2 control-label">사용시간</label>
         <div class="col-lg-10">
-          <div class="col-lg-5">
-            <input type="time" class="form-control" name="start_time" required>  
+          <div class="col-lg-5" style="padding-left: 0px;padding-right: 0px;">
+            <input type="time" class="form-control" name="start_time" required style="padding-left: 0px;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;width: 105px;">  
           </div>
-          <div class="col-lg-1">
+          <div class="col-lg-1" style="padding-left: 0px;padding-right: 15px;">
             <center>~</center>
           </div>
-          <div class="col-lg-5">
-            <input type="time" class="form-control" name="finish_time" required> 
+          <div class="col-lg-5" style="padding-left: 0px;padding-right: 0px;">
+            <input type="time" class="form-control" name="finish_time" required style="padding-left: 0px;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;width: 105px;"> 
           </div>
         </div>
         
