--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -79,7 +79,7 @@
         </div>
         이름  : <%=current_user.student_name%><br>
         학번  : <%=current_user.student_number%><br>
-        학과  : ...<br>
+        학과  : <%=current_user.department%><br>
       </div>
     </div>
   </div>
