--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,14 @@
     <%= f.text_field :student_name, autofocus: true %>
   </div>
   <br>
+  
+  <div class="field">
+    <%= f.label :department,"학과" %><br />
+    <!--<2%= f.text_field :department, autofocus: true %>-->
+    <%= f.select :department, options_for_select(%w[정통 Albania Algeria...]) %>
+  </div>
+  <br>
+  
   <div class="field">
     <%= f.label :email,"이메일" %><br />
     <%= f.email_field :email, autofocus: true %>
