--- a/app/views/freeboard/upload.erb
+++ b/app/views/freeboard/upload.erb
@@ -11,7 +11,7 @@
           <center>   
             <div style="text-align: center; font-size: 20px;" id="menu_font"><br> 이름 </div>
             <div style="padding-top:1px; padding-bottom:1px; background:rgba(80,80,80,0.15); align:center; width: 700px; font-size: 18px;" id="menu_font_t">
-               <br><div tpye= "text" name = "users"><%= current_user.student_name %></div><br>
+               <br><div type= "text" name = "users"><%= current_user.student_name %></div><br>
             </div>
           </center>
     <% end %>
@@ -23,15 +23,15 @@
     <div style="text-align: center; font-size: 20px;" id="menu_font">내용</div> 
     <textarea name="user_content" placeholder="Content" rows="20" cols="70"   style="font-size: 18px;" id="menu_font_t"></textarea>
     <br><br>
-    <input type="hidden" name="user_name" value="<%= current_user.student_name %>">
+    <!--<input type="hidden" name="user_name" value="%= current_user.student_name %>">-->
     <!--<input type="hidden" name="user_major" value="<%#= current_user.major %>">-->
-    <input type="hidden" name="user_hakbun" value="<%= current_user.student_number %>">
+    <!--<input type="hidden" name="user_hakbun" value="%= current_user.student_number %>">-->
     <br>
-        <div style="text-align: center; font-size: 18px;" id="menu_font">
-            * 게시글의 비밀번호를 입력해주세요.<br>
-            (수정 및 삭제시 사용됩니다)<br>
-        </div>
-    <input type="password" name="user_passowrd" placeholder="Password" style="font-size: 15px; height: 30px;" id="menu_font_t">&nbsp;
+        <!--<div style="text-align: center; font-size: 18px;" id="menu_font">-->
+        <!--    * 게시글의 비밀번호를 입력해주세요.<br>-->
+        <!--    (수정 및 삭제시 사용됩니다)<br>-->
+        <!--</div>-->
+    <!--<input type="password" name="user_passowrd" placeholder="Password" style="font-size: 15px; height: 30px;" id="menu_font_t">&nbsp;-->
     <input class="btn btn-primary btn-sm" type ="submit" style="font-size: 18px;" id="menu_font" id = "writeadmin" value = "작성하기"></input> <br> <br> <br>
 
 <% end %>
