--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -176,6 +176,46 @@
           </p>
         </div>
       </center><br>
+      <!--<nav class="navbar-fixed-top">-->
+      <!--  <div class="container">-->
+      <!--    <div align="right" style="padding-top:100px;margin-right:-200px">-->
+      <!--      <div class="btn-group btn-group-sm btn-group" role="group">-->
+              
+      <!--          <button type="button" id="top" class="btn btn-default">-->
+      <!--            <a href="#howtouse">-->
+      <!--              <div class="page-scroll">-->
+      <!--                How To Use-->
+                    
+                    
+                      <!--<i class="icon-angle-down scroll-down" style="padding-top:2px" >-->
+      <!--                  <span class="glyphicon glyphicon-hand-down"></span>-->
+                      <!--</i>-->
+                    
+      <!--              </div>-->
+      <!--            </a>-->
+      <!--          </button>-->
+                
+      <!--        <button type="button" id="bottom" class="btn btn-default"> 공지사항 </button>-->
+              
+      <!--        <button type="button" class="btn btn-default">-->
+                
+      <!--            <a href="#top">-->
+      <!--              TOP <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>-->
+      <!--            </a>-->
+                
+      <!--        </button>-->
+              
+      <!--        <button type="button" class="btn btn-default">-->
+                
+      <!--            <a href="#bottom">-->
+      <!--              BOTTOM <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>-->
+      <!--            </a>-->
+                
+      <!--        </button>-->
+      <!--      </div>-->
+      <!--    </div>-->
+      <!--  </div>-->
+      <!--</nav>-->
 
     <!--공지사항-->
     <section class="mt150" id="notice_slidedown">
@@ -309,7 +349,7 @@
       		</div>
       			<h3 class="red-border-bottom" id = "picon1" >Contact</h3><br>
       			<p id = "picon1" id="menu_font_t" style="font-size: 17px;">사용 중 불편하거나 건의사항이 있으면<br>아래의 쪽지보내기를 통해<br>관리자에게 쪽지를 보내주세요.</p>
-      			<a href ="http://my-zone-park-ji-yeon.c9.io/message/main"> <button id = "picon1" style="color: black; font-size: 17px;" id="menu_font_t"> 쪽지 보내기</button> </a> 
+      			<a href ="/message/write"> <button id = "picon1" style="color: black; font-size: 17px;" id="menu_font_t"> 쪽지 보내기</button> </a> 
   		  </div>
   		
   		  <div class="col-lg-4 col-sm-4 focus-box red wow fadeInLeft animated animated" data-wow-offset="30" data-wow-duration="1.5s" data-wow-delay="0.15s" style="visibility: visible;-webkit-animation-duration: 1.5s; -moz-animation-duration: 1.5s; animation-duration: 1.5s;-webkit-animation-delay: 0.15s; -moz-animation-delay: 0.15s; animation-delay: 0.15s;">
