--- a/app/views/message/reply.erb
+++ b/app/views/message/reply.erb
@@ -10,14 +10,14 @@
        <div class="form-group">
         <label for="inputprofessor" class="col-lg-2 control-label">보내는 사람</label>
         <div class="col-lg-10">
-          <input type="text" class="form-control" name="sender" value="<%=@reply_message.receiver%>">
+          <input type="text" class="form-control" name="sender" value="<%=User.find(@reply_message.receiver).student_name%> (<%=User.find(@reply_message.receiver).student_number%>)">
         </div>
       </div>
       
       <div class="form-group">
         <label for="inputprofessor" class="col-lg-2 control-label">받는사람</label>
         <div class="col-lg-10">
-          <input type="text" class="form-control" name="receiver"  value="<%=@reply_message.sender%>" >
+          <input type="text" class="form-control" name="receiver"  value="<%=User.find(@reply_message.sender).student_name%> (<%=User.find(@reply_message.sender).student_number%>)" >
         </div>
       </div>
       
