--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -147,6 +147,7 @@
                         <input name="user[remember_me]" type="hidden" value="0"><input type="checkbox" value="1" name="user[remember_me]" id="user_remember_me">
                         <label for="user_remember_me" style="text-align:right; font-size:15px; color:white;" id="menu_font_t">Remember me</label> &nbsp;     
                         <input type="submit" name="commit" id="menu_font_t" value="Log in">
+                        <a href="/users/sign_up"><input type="submit" name="commit" id="menu_font_t" value="회원가입"></a>
                       </div>
                   </form>
                   
