--- a/app/views/book/mypage.erb
+++ b/app/views/book/mypage.erb
@@ -1,8 +1,48 @@
-<h1> 마이페이지 </h1>
-<p>성 명 : <%= current_user.student_name%><p>
-<p>학 번 : <%#= current_user.student_number %><p>
-<p>학 과 : <%#= current_user.department %><p>
-<p>나의 예약 수 : <%= Reservation.where(user: current_user.id).count %><p>
-<p>승인 대기중 : <%#= current_user.department %><p>
-<p>승인 완료 : <%#= current_user.department %><p>
+
+<div class="row" >
+  <div class="col-md-3" style="padding-left:30px" align="right">
+    <div class="list-group" >
+      <a href="#user_menu" class="list-group-item" data-toggle="collapse">회원 정보 관리</a>
+      
+      <div class="collapse" id="user_menu" >
+        <ul class="list-group">
+          <a href="/users/edit" class="list-group-item">회원 정보 수정</a>
+          <a href="/users(.:format)" class="list-group-item">회원 탈퇴</a>
+        </ul>
+      </div>
+      
+      <a href="#reservation_menu" class="list-group-item" data-toggle="collapse">예약 현황 관리</a>
+        <div class="collapse" id="reservation_menu" >
+          <ul class="list-group">
+            <a href="#" class="list-group-item">승인 대기 예약</a>
+            <a href="#" class="list-group-item">승인 완료 예약</a>
+          </ul>
+        </div>
+      
+      <a href="#message_menu" class="list-group-item" data-toggle="collapse">나의 문의함</a>
+        <div class="collapse" id="message_menu" >
+          <ul class="list-group">
+            <a href="#" class="list-group-item">내가 보낸 문의</a>
+            <a href="#" class="list-group-item">내가 받은 답장</a>
+          </ul>
+        </div>
+        
+    </div>
+  </div>
+  
+  <div class="col-md-9" style="padding-right:30px">
+    <div class="alert alert-warning">
+      <h1> 마이페이지 </h1>
+      <p>성 명 : <%= current_user.student_name%><p>
+      <p>학 번 : <%= current_user.student_number %><p>
+      <p>학 과 : <%= current_user.department %><p>
+      <p>나의 예약 수 : <%= Reservation.where(user: current_user.id).count %><p>
+      <p>승인 대기중 : <%= Reservation.where("user = ? and state = ?", current_user.id, "승인대기").count %><p>
+      <p>승인 완료 : <%= Reservation.where("user = ? and state = ?", current_user.id, "승인완료").count %><p>
+
+    </div>
+  </div>  
+</div>
+
+
 
