--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -163,7 +163,7 @@
                                 
                 <% else %> <!--관리자가 아닐때 승인대기-->
                   <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
-                  <input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
+                  <input type="button" class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>
                             
                 <% end %>
                                  
