--- a/app/views/book/mypage.erb
+++ b/app/views/book/mypage.erb
@@ -22,9 +22,9 @@
       <a href="#message_menu" class="list-group-item" data-toggle="collapse">나의 문의함</a>
         <div class="collapse" id="message_menu" >
           <ul class="list-group">
-            <a href="#" id="all_message" class="list-group-item">통합 메일함</a>
-            <a href="#" class="list-group-item">내가 보낸 문의</a>
-            <a href="#" class="list-group-item">내가 받은 답장</a>
+            <a href="/message/main" id="all_message" class="list-group-item">통합 메일함</a>
+            <a href="/message/send_message" class="list-group-item">내가 보낸 문의</a>
+            <a href="/message/receive_message" class="list-group-item">내가 받은 답장</a>
           </ul>
         </div>
         
