--- a/app/views/book/mypage.erb
+++ b/app/views/book/mypage.erb
@@ -7,7 +7,7 @@
       <div class="collapse" id="user_menu" >
         <ul class="list-group">
           <a href="/users/edit" class="list-group-item">회원 정보 수정</a>
-          <a href="/users(.:format)" class="list-group-item">회원 탈퇴</a>
+          <!--<a href="/users(.:format)" class="list-group-item">회원 탈퇴</a>-->
         </ul>
       </div>
       
